Added YAML completion